added cart section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -41,8 +41,8 @@
 <body class="work-sans bg-bg-color">
     <header class="bg-yellow-50 max-w-full">
         <!-- banner section -->
-        <div class="hero min-h-min">
-            <div class="hero-content flex-col gap-10 lg:flex-row-reverse w-10/12 justify-between">
+        <div class="hero min-h-screen">
+            <div class="hero-content flex-col gap-10 lg:flex-row-reverse w-10/12 justify-around">
                 <img src="./images/Summer 1.png" class="max-w-sm rounded-lg" />
                 <div class="text-center">
                     <h4 class="text-1xl font-semibold">---SALE FEVER---</h4>
@@ -62,7 +62,7 @@
             <div>
                 <div>
                     <!-- Kitchenware Section -->
-                    <h2 class="text-4xl font-semibold my-10">Kitchenware</h2>
+                    <h2 class="text-4xl font-semibold my-10 text-center lg:text-left">Kitchenware</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
                         <!-- product-1 -->
                         <div class="card bg-base-100 shadow-xl w-full">
@@ -75,12 +75,13 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
-                                <h2 class="card-title">K. Accessories</h2>
+                                <h2 class="card-title">K. Accessories (Spoon)</h2>
                                 <p class="font-medium">39.00 TK</p>
                             </div>
                         </div>
@@ -95,7 +96,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -115,7 +117,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -128,7 +131,7 @@
                 </div>
                 <div class="my-20">
                     <!-- Sportswear Section -->
-                    <h2 class="text-4xl font-semibold my-10">Sportswear</h2>
+                    <h2 class="text-4xl font-semibold my-10 text-center lg:text-left">Sportswear</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
                         <!-- product-4 -->
                         <div class="card w-full bg-base-100 shadow-xl">
@@ -141,7 +144,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -161,7 +165,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -181,7 +186,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -194,7 +200,7 @@
                 </div>
                 <div>
                     <!-- Kitchenware Section -->
-                    <h2 class="text-4xl font-semibold my-10">Furniture</h2>
+                    <h2 class="text-4xl font-semibold my-10 text-center lg:text-left">Furniture</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
                         <!-- product-7 -->
                         <div class="card w-full bg-base-100 shadow-xl">
@@ -207,7 +213,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -227,7 +234,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -247,7 +255,8 @@
                             <div class="card-body items-center text-center">
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -259,16 +268,24 @@
                     </div>
                 </div>
             </div>
-            <div class="mx-auto">
-                <div>
-                    <br>
-                    <br>
-                    <br>
+            <div class="mx-auto w-[350px]">
+                <div class="bg-white mt-28 rounded-lg p-5">
                     <h6 class="font-semibold text-xl">Have coupon?</h6>
                     <div class="join">
                         <input class="input join-item border border-gray-200" placeholder="Coupon code" />
                         <button class="btn join-item rounded-xl text-white bg-common ">Apply</button>
                     </div>
+                </div>
+                <div class="bg-white p-5 mt-10 rounded-lg">
+                    <div class="border-b-2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, natus. Eum eaque ea obcaecati quasi? Quibusdam laborum odio aliquam, odit alias facere aperiam nemo quam, a, praesentium soluta necessitatibus est.
+                    </div>
+                    <div class="border-b-2 my-5">
+                        <h6 class="font-semibold text-xl">Total Price :</h6>
+                        <h6 class="font-semibold text-xl">Discount :</h6>
+                        <h6 class="font-semibold text-xl">Total :</h6>
+                    </div>
+                    <button class="w-full btn btn-primary border-none text-white bg-common py-2">Make Purchase</button>
                 </div>
             </div>
         </div>
