--- a/index.html
+++ b/index.html
@@ -281,11 +281,9 @@
                     </div>
                     <div class="border-b-2 my-5">
                         <h6 class="font-semibold text-xl">Total Price: <span id="total-price"
-                                class="text-gray-400"></span> <span class="text-gray-400">TK</span></h6>
-                        <h6 class="font-semibold text-xl">Discount: <span id="discount"></span> <span
-                                class="text-gray-400">TK</span></h6>
-                        <h6 class="font-semibold text-xl">Total: <span id="total"></span> <span
-                                class="text-gray-400">TK</span></h6>
+                                class="text-gray-400">00.00</span> <span class="text-gray-400">TK</span></h6>
+                        <h6 class="font-semibold text-xl">Discount: <span id="discount" class="text-gray-400">00.00 TK</span></h6>
+                        <h6 class="font-semibold text-xl">Total: <span id="total" class="text-gray-400">00.00 TK</span></h6>
                     </div>
                     <button onclick="my_modal_5.showModal()" id="purchase-btn"
                         class="w-full btn btn-primary border-none text-white bg-common py-2">Make
@@ -308,5 +306,6 @@
         </div>
     </main>
     <script src="scripts/item-cart.js"></script>
+    <script src="scripts/discount.js"></script>
 </body>
 </html>
