added coupon button condition

--- a/index.html
+++ b/index.html
@@ -280,10 +280,9 @@
                     <div id="selected-items" class="border-b-2">
                     </div>
                     <div class="border-b-2 my-5">
-                        <h6 class="font-semibold text-xl">Total Price: <span id="total-price"
-                                class="text-gray-400">00.00</span> <span class="text-gray-400">TK</span></h6>
-                        <h6 class="font-semibold text-xl">Discount: <span id="discount" class="text-gray-400">00.00 TK</span></h6>
-                        <h6 class="font-semibold text-xl">Total: <span id="total" class="text-gray-400">00.00 TK</span></h6>
+                        <h6 class="font-semibold text-xl">Total Price: <span id="total-price">00.00</span> <span>TK</span></h6>
+                        <h6 class="font-semibold text-xl">Discount: <span id="discount">00.00 TK</span></h6>
+                        <h6 class="font-semibold text-xl">Total: <span id="total">00.00 TK</span></h6>
                     </div>
                     <button onclick="my_modal_5.showModal()" id="purchase-btn"
                         class="w-full btn btn-primary border-none text-white bg-common py-2">Make
@@ -306,6 +305,5 @@
         </div>
     </main>
     <script src="scripts/item-cart.js"></script>
-    <script src="scripts/discount.js"></script>
 </body>
 </html>
