created summer sale website

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="bg-yellow-50 max-w-full">
         <div class="hero min-h-screen">
             <div class="hero-content flex-col lg:flex-row-reverse">
-                <img src="./images/Summer 1.png" class="w-full lg:max-w-lg rounded-lg" />
+                <img src="./images/Summer 1.png" class="w-full lg:w-6/12 rounded-lg" />
                 <div class="text-center">
                     <h4 class="text-2xl font-semibold">---SALE FEVER---</h4>
                     <h1 class="text-3xl lg:text-5xl font-bold py-7">Purchase TK 200 or <br> above & get <span
@@ -269,8 +269,8 @@
                     </div>
                 </div>
             </div>
-            <div class="mx-auto w-full p-5 lg:w-[350px]">
-                <div class="bg-white mt-20 rounded-lg p-5">
+            <div class="mx-auto w-full lg:w-[350px]">
+                <div class="bg-white mt-14 rounded-lg p-5">
                     <h6 class="font-semibold text-xl">Have coupon?</h6>
                     <div class="join">
                         <input id="coupon-field" class="input w-full join-item border border-gray-200"
